# JNINote

HelloJNI/app/: build.gradle
HelloJNI/app/src/main/cpp/: com_example_hellojni_MainActivity.h  native-lib.cpp
HelloJNI/app/src/main/java/com/example/hellojni/: MainActivity.java
HelloJNI2/app/: build.gradle
HelloJNI2/app/src/androidTest/java/com/example/hellojni2/: ExampleInstrumentedTest.java
HelloJNI2/app/src/main/: AndroidManifest.xml
HelloJNI2/app/src/main/cpp/: CMakeLists.txt  Test.cpp  native-lib.cpp
HelloJNI2/app/src/main/java/com/example/hellojni2/: Dog.java  (+3 more)
HelloJNI2/app/src/main/res/layout/: activity_main.xml
HelloJNI2/app/src/main/res/values/: strings.xml
HelloJNI3/app/: build.gradle
HelloJNI3/app/src/main/: AndroidManifest.xml
HelloJNI3/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
HelloJNI3/app/src/main/res/layout/: activity_main.xml
HelloJNI3/app/src/main/res/values/: strings.xml
HelloJNI4/app/: build.gradle
HelloJNI4/app/src/main/: AndroidManifest.xml
HelloJNI4/app/src/main/cpp/: native-lib.cpp
HelloJNI4/app/src/main/res/layout/: activity_main.xml
HelloJNI4/app/src/main/res/values/: strings.xml
HelloJNI5/app/: build.gradle
HelloJNI5/app/src/main/: AndroidManifest.xml
HelloJNI5/app/src/main/cpp/: native-lib.cpp
HelloJNI5/app/src/main/res/values/: strings.xml
HelloJNI6/app/: build.gradle
HelloJNI6/app/src/main/: AndroidManifest.xml
HelloJNI6/app/src/main/cpp/: CMakeLists.txt  MyParcel.cpp  MyParcel.h  com_example_hellojni6_MyParcel.h  native-lib.cpp
HelloJNI6/app/src/main/res/values/: strings.xml
(+15 files in other folders)
